--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "license": "MIT",
   "repository": "github:bitsnap/eslint-import-resolver",
   "devDependencies": {
+    "lodash": "^4.17.5",
     "@babel/cli": "^7.0.0-beta.44",
     "@babel/core": "^7.0.0-beta.44",
     "@babel/plugin-external-helpers": "^7.0.0-beta.44",
@@ -40,13 +41,13 @@
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-minify": "^0.4.0",
     "coveralls": "^3.0.0",
-    "eslint": "^5.0.0-alpha.1",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-lodash-fp": "^2.1.3",
     "eslint-plugin-lodash-magic-import": "^0.1.2",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-unicorn": "^4.0.3",
     "nyc": "^11.3.0",
     "rollup": "^0.57.1",
