--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@bitsnap/import-resolver",
   "description": "Universal import resolver",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "authors": [
     "Yuriy Yarosh <void.nugget@gmail.com>"
   ],
+  "bin": {
+    "resolve": "dist/resolve.min.js"
+  },
   "dependencies": {
     "lodash": "^4.17.11",
     "lodash-magic-cache": "^0.2.1"
@@ -19,6 +22,7 @@
     "babel-plugin-istanbul": "^5.1.0",
     "babel-plugin-lodash-magic-import": "^0.2.2",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-resolver": "^1.1.0",
     "babel-preset-minify": "^0.5.0",
     "coveralls": "^3.0.2",
     "eclint": "^2.8.1",
@@ -40,6 +44,8 @@
     "tape": "^4.9.1"
   },
   "files": [
+    "dist/resolve.min.js",
+    "dist/resolve.min.js.map",
     "dist/import-resolver.min.js",
     "dist/import-resolver.min.js.map"
   ],
@@ -58,6 +64,9 @@
     "exclude": [
       "test/*.js"
     ]
+  },
+  "peerDependencies": {
+    "@babel/core": "^7.2.2"
   },
   "repository": "github:bitsnap/import-resolver",
   "scripts": {
